--- a/hello-world-ebusiness/platforms/browser/www/index.html
+++ b/hello-world-ebusiness/platforms/browser/www/index.html
@@ -62,6 +62,9 @@
 	<div data-role="footer">
 		<a href="#bar">Seite 2</a>
 		<a href="#" id="target">JS</a>
+		<button data-role="button" id="Kamera">Kamera</button>
+		
+		
 	</div><!-- /footer -->
 </div><!-- /page -->
 
