API-Key draußen

--- a/iRogg/platforms/browser/www/index.html
+++ b/iRogg/platforms/browser/www/index.html
@@ -61,7 +61,7 @@
 	<div role="main" class="ui-content">
 		<p>I'm first in the source order so I'm shown as the page.</p>
 		<p>View internal page called <a href="#bar">bar</a></p>
-		<img style="visibility:hidden" id="adil" src="img/adil.jpeg" alt="Adil"/>
+		<!--<img style="visibility:hidden" id="adil" src="img/adil.jpeg" alt="Adil"/>-->
 		
 		
 		
