--- a/iRogg/www/index.html
+++ b/iRogg/www/index.html
@@ -44,7 +44,7 @@
 	<script src="js/jquery-1.11.1.min.js"></script>
 	<script src="js/jquery.mobile-1.4.5.min.js"></script>
 	<!--<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false&libraries=geometry"></script> -->
-	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBvFQtYBNuJ1gjoPpkeHvthjIn1cEamY9c&callback=initMap"
+	<script src="https://maps.googleapis.com/maps/api/js?key=&callback=initMap"
     async defer></script>
 	
     <title>Hello World</title>
@@ -61,7 +61,7 @@
 	<div role="main" class="ui-content">
 		<p>I'm first in the source order so I'm shown as the page.</p>
 		<p>View internal page called <a href="#bar">bar</a></p>
-		<img style="visibility:hidden" id="adil" src="img/adil.jpeg" alt="Adil"/>
+		<!--<img style="visibility:hidden" id="adil" src="img/adil.jpeg" alt="Adil"/>-->
 		
 		
 		
